<resources>
    <string name="app_name">Mode Game</string>
    <string name="reset">초기화</string>
    <string name="bg">배경</string>
    <string name="timerBtn">타이머</string>
    <string name="stopwatchBtn">스톱워치</string>
    <string name="colon">:</string>
    <string name="dot">.</string>
    <string name="start">시작</string>
    <string name="team">용용팀 vs 초이현</string>
    <string name="roulette">커스텀 벌칙 룰렛</string>
    <string name="scoreboard">점수판</string>
    <string name="turnRoulette">돌리기</string>
    <string name="deletePenalty">벌칙 제거하기</string>
    <string name="addPenalty">벌칙 추가하기</string>
    <string name="setting">설정</string>
    <string name="naga">나가기</string>
    <string name="redPlus">빨간팀 점수 추가</string>
    <string name="redMinus">빨간팀 점수 감소</string>
    <string name="bluePlus">파란팀 점수 추가</string>
    <string name="blueMinus">파란팀 점수 감소</string>
    <string name="teamTitle">팀 정하기</string>
    <string name="memo">메모장</string>
    <string name="wallet">가상 지갑</string>
    <string name="nine">9</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="seven">7</string>
    <string name="teammate">팀원배치</string>
    <string name="team1">1팀</string>
    <string name="team2">2팀</string>
    <string name="peopleNumber">0명</string>
    <string name="money">소지금: 1,000,000</string>
    <string name="minusMoney">출금</string>
    <string name="plusMoney">입금</string>
    <string name="diceResult">2가 나왔습니다!</string>
    <string name="diceRoll">주사위 굴리기</string>
    <string name="appTitle_kr">모드게임</string>
    <string name="powerOff">종료</string>
</resources>