<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/nagaBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/naga"
        android:contentDescription="@string/naga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/setting"
        android:contentDescription="@string/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/scoreboard"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="60dp"
        android:background="@color/half_transparent_light_blue">

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/blue"
            android:text="@string/reset"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/teamText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/team"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetBtn" />

        <ImageButton
            android:id="@+id/redPlus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/plus"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/redPlus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/redMinus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/minus"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/redMinus"
            app:layout_constraintBottom_toBottomOf="@id/redPlus"
            app:layout_constraintStart_toEndOf="@id/redPlus" />

        <ImageButton
            android:id="@+id/blueMinus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/minus"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/blueMinus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/bluePlus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/plus"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/bluePlus"
            app:layout_constraintBottom_toBottomOf="@id/blueMinus"
            app:layout_constraintEnd_toStartOf="@id/blueMinus" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/scoreboardImg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/scoreboard"
        android:contentDescription="@string/scoreboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:textSize="100sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/scoreboardImg"
        app:layout_constraintTop_toTopOf="@id/scoreboardImg"
        android:layout_marginTop="50dp"
        android:layout_marginStart="65dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:textSize="100sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/scoreboardImg"
        app:layout_constraintTop_toTopOf="@id/scoreboardImg"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/scoreboardImg"
        app:layout_constraintTop_toTopOf="@id/scoreboardImg"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/scoreboardImg"
        app:layout_constraintTop_toTopOf="@id/scoreboardImg"
        android:layout_marginTop="56dp"
        android:layout_marginStart="10dp"
        android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>