<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_transparent_light_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/appTitle_kr"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText">

        <ImageButton
            android:id="@+id/timerBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/time_removebg"
            android:contentDescription="@string/timerBtn"
            app:layout_constraintBottom_toTopOf="@id/scoreBtn"
            app:layout_constraintEnd_toStartOf="@id/walletBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/walletBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/money_removebg"
            android:contentDescription="@string/wallet"
            app:layout_constraintBottom_toTopOf="@id/diceBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/timerBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/scoreBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/score_removebg"
            android:contentDescription="@string/scoreboard"
            app:layout_constraintBottom_toTopOf="@id/memoBtn"
            app:layout_constraintEnd_toStartOf="@id/diceBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timerBtn" />

        <ImageButton
            android:id="@+id/diceBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/dice_removebg"
            android:contentDescription="@string/diceRoll"
            app:layout_constraintBottom_toTopOf="@id/rouletteBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/scoreBtn"
            app:layout_constraintTop_toBottomOf="@id/walletBtn" />

        <ImageButton
            android:id="@+id/memoBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/memo_removebg"
            android:contentDescription="@string/memo"
            app:layout_constraintBottom_toTopOf="@id/teamBtn"
            app:layout_constraintEnd_toStartOf="@id/rouletteBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreBtn" />

        <ImageButton
            android:id="@+id/rouletteBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/roulette_removebg"
            android:contentDescription="@string/roulette"
            app:layout_constraintBottom_toTopOf="@id/powerBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/memoBtn"
            app:layout_constraintTop_toBottomOf="@id/diceBtn" />

        <ImageButton
            android:id="@+id/teamBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/team_removebg"
            android:contentDescription="@string/teamTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/powerBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/memoBtn" />

        <ImageButton
            android:id="@+id/powerBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/poweroff_removebg"
            android:contentDescription="@string/powerOff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/teamBtn"
            app:layout_constraintTop_toBottomOf="@id/rouletteBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>