<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/nagaBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/naga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/naga"/>

    <ImageButton
        android:id="@+id/settingBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/setting"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/roulette"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/rouletteBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@color/light_blue"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/rouletteImg"
            android:layout_width="315dp"
            android:layout_height="315dp"
            android:src="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/turnBtn"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="@color/blue"
        android:text="@string/turnRoulette"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rouletteBg" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_marginStart="25dp"
        android:backgroundTint="@color/blue"
        android:text="@string/deletePenalty"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turnBtn" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/blue"
        android:text="@string/addPenalty"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turnBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>