<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/nagaBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/naga"
        android:contentDescription="@string/naga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/setting"
        android:contentDescription="@string/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/wallet"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moneyText"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/money"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@id/moneyImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingBtn" />

    <ImageView
        android:id="@+id/moneyImg"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/moneyText"
        app:layout_constraintTop_toTopOf="@id/moneyText" />

    <ImageView
        android:id="@+id/moneyBg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/money"
        app:layout_constraintTop_toBottomOf="@id/moneyImg" />

    <ImageView
        android:id="@+id/walletImg"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/plusBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blue"
        android:text="@string/plusMoney"
        app:layout_constraintBottom_toBottomOf="@id/walletImg"
        app:layout_constraintEnd_toStartOf="@id/minusBtn"
        app:layout_constraintStart_toStartOf="@id/walletImg" />

    <Button
        android:id="@+id/minusBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/red"
        android:text="@string/minusMoney"
        app:layout_constraintBottom_toBottomOf="@id/plusBtn"
        app:layout_constraintEnd_toEndOf="@id/walletImg"
        app:layout_constraintStart_toEndOf="@id/plusBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>