<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/nagaBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/naga"
        android:contentDescription="@string/naga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/setting"
        android:contentDescription="@string/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/teamTitle"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="25dp"
        android:background="@color/half_transparent_light_blue">

        <TextView
            android:id="@+id/teammateText"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:gravity="center"
            android:text="@string/teammate"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/redTeamText"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:background="@color/black"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text="@string/team1"
            android:textSize="50sp"
            app:layout_constraintEnd_toStartOf="@id/blueTeamText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teammateText" />

        <TextView
            android:id="@+id/blueTeamText"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:background="@color/black"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:text="@string/team2"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/redTeamText"
            app:layout_constraintTop_toBottomOf="@id/teammateText" />

        <ImageButton
            android:id="@+id/minusBtn"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/numberText"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/numberText"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toEndOf="@id/minusBtn"
            app:layout_constraintEnd_toStartOf="@id/plusBtn"
            app:layout_constraintBottom_toBottomOf="@id/minusBtn"
            android:text="@string/peopleNumber"
            android:gravity="center"
            android:textSize="30sp"
            />

        <ImageButton
            android:id="@+id/plusBtn"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/plus"
            app:layout_constraintBottom_toBottomOf="@id/minusBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/numberText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>