<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/nagaBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/naga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/naga"/>

    <ImageButton
        android:id="@+id/settingBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/setting"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/stopwatchBtn"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:contentDescription="@string/bg"
        android:src="@drawable/hourglass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/timerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <NumberPicker
            android:id="@+id/MinuteTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:selectionDividerHeight="0dp"
            android:theme="@style/numberPickerCustomSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/colon"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:text="@string/colon"
            android:textAlignment="center"
            android:textSize="70sp"
            app:layout_constraintEnd_toStartOf="@id/SecondTime"
            app:layout_constraintStart_toEndOf="@id/MinuteTime"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/SecondTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectionDividerHeight="0dp"
            android:theme="@style/numberPickerCustomSize"
            app:layout_constraintStart_toEndOf="@id/MinuteTime"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dot"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:text="@string/dot"
            android:textAlignment="center"
            android:textSize="70sp"
            app:layout_constraintEnd_toStartOf="@id/MilliSecondTime"
            app:layout_constraintStart_toEndOf="@id/SecondTime"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/MilliSecondTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25sp"
            android:selectionDividerHeight="0dp"
            android:theme="@style/numberPickerCustomSize"
            app:layout_constraintStart_toEndOf="@id/SecondTime"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/timerBtn"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/sandclock"
        android:contentDescription="@string/timerBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@id/timerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/timerBtn"
        app:layout_constraintTop_toTopOf="@id/timerBtn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerBtn">

        <Button
            android:id="@+id/timerMenuBtn"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/timerBtn" />

        <Button
            android:id="@+id/stopwatchMenuBtn"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/half_transparent_light_blue"
            android:text="@string/stopwatchBtn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>